tests/models/struct/unnamed/u8/fail/validate.rs
use dade::{model, Result};
#[model]
struct TestModel (
   #[field(validate = validate_fn)]
    u8
);
fn main() {}
